--- a/toc.html
+++ b/toc.html
@@ -16,7 +16,10 @@
                     <a href="articles/intro.html" name="articles/toc.html" title="Articles">Articles</a>
                 </li>
                 <li>
-                    <a href="api/index.html" name="" title="Api Documentation">Api Documentation</a>
+                    <a href="api/index.html" name="" title="Macro Tools Documentation">Macro Tools Documentation</a>
+                </li>
+                <li>
+                    <a href="api/Source" name="" title="Warcraft: Legacies Documentation">Warcraft: Legacies Documentation</a>
                 </li>
           </ul>
       </div>
