deploy: c96e3f656748009dee5d204e144af8b11ad8028b

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -108,63 +108,63 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a href="AzerothWarsCSharp.Source.Game_Logic.html" name="" title="AzerothWarsCSharp.Source.Game_Logic">AzerothWarsCSharp.Source.Game_Logic</a>
+                    <a href="AzerothWarsCSharp.Source.GameLogic.html" name="" title="AzerothWarsCSharp.Source.GameLogic">AzerothWarsCSharp.Source.GameLogic</a>
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.CinematicMode.html" name="" title="CinematicMode">CinematicMode</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.CinematicMode.html" name="" title="CinematicMode">CinematicMode</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.CinematicState.html" name="" title="CinematicState">CinematicState</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.CinematicState.html" name="" title="CinematicState">CinematicState</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.CleanPersons.html" name="" title="CleanPersons">CleanPersons</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.CleanPersons.html" name="" title="CleanPersons">CleanPersons</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.DisplayIntroText.html" name="" title="DisplayIntroText">DisplayIntroText</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.DisplayIntroText.html" name="" title="DisplayIntroText">DisplayIntroText</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.GameSettings.html" name="" title="GameSettings">GameSettings</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.GameSettings.html" name="" title="GameSettings">GameSettings</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.HeroGlowFix.html" name="" title="HeroGlowFix">HeroGlowFix</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.HeroGlowFix.html" name="" title="HeroGlowFix">HeroGlowFix</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.InfoQuests.html" name="" title="InfoQuests">InfoQuests</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.InfoQuests.html" name="" title="InfoQuests">InfoQuests</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.ObserverSlots.html" name="" title="ObserverSlots">ObserverSlots</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.ObserverSlots.html" name="" title="ObserverSlots">ObserverSlots</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.OpenAllianceVote.html" name="" title="OpenAllianceVote">OpenAllianceVote</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.OpenAllianceVote.html" name="" title="OpenAllianceVote">OpenAllianceVote</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.RefundZeroLimitUnits.html" name="" title="RefundZeroLimitUnits">RefundZeroLimitUnits</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.RefundZeroLimitUnits.html" name="" title="RefundZeroLimitUnits">RefundZeroLimitUnits</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.ShipyardBanZones.html" name="" title="ShipyardBanZones">ShipyardBanZones</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones.html" name="" title="ShipyardBanZones">ShipyardBanZones</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.StartingQuestPopup.html" name="" title="StartingQuestPopup">StartingQuestPopup</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.StartingQuestPopup.html" name="" title="StartingQuestPopup">StartingQuestPopup</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.StartingResources.html" name="" title="StartingResources">StartingResources</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.StartingResources.html" name="" title="StartingResources">StartingResources</a>
                           </li>
                     </ul>
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a href="AzerothWarsCSharp.Source.Game_Logic.GameEnd.html" name="" title="AzerothWarsCSharp.Source.Game_Logic.GameEnd">AzerothWarsCSharp.Source.Game_Logic.GameEnd</a>
+                    <a href="AzerothWarsCSharp.Source.GameLogic.GameEnd.html" name="" title="AzerothWarsCSharp.Source.GameLogic.GameEnd">AzerothWarsCSharp.Source.GameLogic.GameEnd</a>
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.GameEnd.ControlPointVictory.html" name="" title="ControlPointVictory">ControlPointVictory</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.GameEnd.ControlPointVictory.html" name="" title="ControlPointVictory">ControlPointVictory</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.GameEnd.PlayerLeaves.html" name="" title="PlayerLeaves">PlayerLeaves</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.GameEnd.PlayerLeaves.html" name="" title="PlayerLeaves">PlayerLeaves</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Game_Logic.GameEnd.VictoryDefeat.html" name="" title="VictoryDefeat">VictoryDefeat</a>
+                              <a href="AzerothWarsCSharp.Source.GameLogic.GameEnd.VictoryDefeat.html" name="" title="VictoryDefeat">VictoryDefeat</a>
                           </li>
                     </ul>
                 </li>
