--- a/api-source/AzerothWarsCSharp.Source.Setup.GameSetup.html
+++ b/api-source/AzerothWarsCSharp.Source.Setup.GameSetup.html
@@ -73,7 +73,8 @@
   
   <h1 id="AzerothWarsCSharp_Source_Setup_GameSetup" data-uid="AzerothWarsCSharp.Source.Setup.GameSetup" class="text-break">Class GameSetup
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>Responsible for setting up the entire game.</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -93,11 +94,12 @@
     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_Setup_GameSetup_Setup.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.Setup.GameSetup.Setup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Setup/GameSetup.cs/#L20">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Setup/GameSetup.cs/#L26">View Source</a>
   </span>
   <a id="AzerothWarsCSharp_Source_Setup_GameSetup_Setup_" data-uid="AzerothWarsCSharp.Source.Setup.GameSetup.Setup*"></a>
   <h4 id="AzerothWarsCSharp_Source_Setup_GameSetup_Setup" data-uid="AzerothWarsCSharp.Source.Setup.GameSetup.Setup">Setup()</h4>
-  <div class="markdown level1 summary"></div>
+  <div class="markdown level1 summary"><p>Initialize the entire game.</p>
+</div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
@@ -114,7 +116,7 @@
                     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_Setup_GameSetup.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.Setup.GameSetup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Setup/GameSetup.cs/#L18" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Setup/GameSetup.cs/#L21" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
