--- a/api-source/AzerothWarsCSharp.Source.GameLogic.RefundZeroLimitUnits.html
+++ b/api-source/AzerothWarsCSharp.Source.GameLogic.RefundZeroLimitUnits.html
@@ -94,11 +94,13 @@
     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_GameLogic_RefundZeroLimitUnits_Setup.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.GameLogic.RefundZeroLimitUnits.Setup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/GameLogic/RefundZeroLimitUnits.cs/#L24">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/GameLogic/RefundZeroLimitUnits.cs/#L27">View Source</a>
   </span>
   <a id="AzerothWarsCSharp_Source_GameLogic_RefundZeroLimitUnits_Setup_" data-uid="AzerothWarsCSharp.Source.GameLogic.RefundZeroLimitUnits.Setup*"></a>
   <h4 id="AzerothWarsCSharp_Source_GameLogic_RefundZeroLimitUnits_Setup" data-uid="AzerothWarsCSharp.Source.GameLogic.RefundZeroLimitUnits.Setup">Setup()</h4>
-  <div class="markdown level1 summary"></div>
+  <div class="markdown level1 summary"><p>Registers triggers that cause the following:</p>
+<p>Whenever a unit with a tech limit of 0 is trained or revived, delete and refund it instantly.</p>
+</div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
