--- a/api-source/AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones.html
+++ b/api-source/AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones.html
@@ -73,7 +73,8 @@
   
   <h1 id="AzerothWarsCSharp_Source_GameLogic_ShipyardBanZones" data-uid="AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones" class="text-break">Class ShipyardBanZones
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>Responsible for preventing Shipyards from being constructed in specific areas.</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -93,7 +94,7 @@
     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_GameLogic_ShipyardBanZones_Setup_IEnumerable_Rectangle__.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones.Setup(IEnumerable%7BRectangle%7D)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/GameLogic/ShipyardBanZones.cs/#L15">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/GameLogic/ShipyardBanZones.cs/#L18">View Source</a>
   </span>
   <a id="AzerothWarsCSharp_Source_GameLogic_ShipyardBanZones_Setup_" data-uid="AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones.Setup*"></a>
   <h4 id="AzerothWarsCSharp_Source_GameLogic_ShipyardBanZones_Setup_IEnumerable_Rectangle__" data-uid="AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones.Setup(IEnumerable{Rectangle})">Setup(IEnumerable&lt;Rectangle&gt;)</h4>
@@ -132,7 +133,7 @@
                     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_GameLogic_ShipyardBanZones.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.GameLogic.ShipyardBanZones%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/GameLogic/ShipyardBanZones.cs/#L10" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/GameLogic/ShipyardBanZones.cs/#L13" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
