deploy: e375538cbe643bc9d8140a91fd023e054cd6665c

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -255,6 +255,9 @@
                               <a href="AzerothWarsCSharp.MacroTools.Cheats.CheatRemove.html" name="" title="CheatRemove">CheatRemove</a>
                           </li>
                           <li>
+                              <a href="AzerothWarsCSharp.MacroTools.Cheats.CheatSetResearchLevel.html" name="" title="CheatSetResearchLevel">CheatSetResearchLevel</a>
+                          </li>
+                          <li>
                               <a href="AzerothWarsCSharp.MacroTools.Cheats.CheatSpawn.html" name="" title="CheatSpawn">CheatSpawn</a>
                           </li>
                           <li>
