--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1001,6 +1001,9 @@
                               <a href="AzerothWarsCSharp.Source.Setup.InstanceSetup.html" name="" title="InstanceSetup">InstanceSetup</a>
                           </li>
                           <li>
+                              <a href="AzerothWarsCSharp.Source.Setup.NeutralHostileSetup.html" name="" title="NeutralHostileSetup">NeutralHostileSetup</a>
+                          </li>
+                          <li>
                               <a href="AzerothWarsCSharp.Source.Setup.NeutralVictimAndPassiveSetup.html" name="" title="NeutralVictimAndPassiveSetup">NeutralVictimAndPassiveSetup</a>
                           </li>
                           <li>
