deploy: 46c3174724782f49faaec666e899abff13bd2b3b

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -208,7 +208,7 @@
                               <a href="AzerothWarsCSharp.Source.Mechanics.BlackEmpire.HeraldBuff.html" name="" title="HeraldBuff">HeraldBuff</a>
                           </li>
                           <li>
-                              <a href="AzerothWarsCSharp.Source.Mechanics.BlackEmpire.HeraldUnitEffect.html" name="" title="HeraldUnitEffect">HeraldUnitEffect</a>
+                              <a href="AzerothWarsCSharp.Source.Mechanics.BlackEmpire.HeraldPassiveAbility.html" name="" title="HeraldPassiveAbility">HeraldPassiveAbility</a>
                           </li>
                           <li>
                               <a href="AzerothWarsCSharp.Source.Mechanics.BlackEmpire.ObjectiveObelisk.html" name="" title="ObjectiveObelisk">ObjectiveObelisk</a>
