deploy: 8b7ab99fab8cf90fba83fd4df8ac07afed2400c7

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -102,6 +102,9 @@
                               <a href="AzerothWarsCSharp.Source.Dialogue.DruidsDialogueSetup.html" name="" title="DruidsDialogueSetup">DruidsDialogueSetup</a>
                           </li>
                           <li>
+                              <a href="AzerothWarsCSharp.Source.Dialogue.LordaeronDialogueSetup.html" name="" title="LordaeronDialogueSetup">LordaeronDialogueSetup</a>
+                          </li>
+                          <li>
                               <a href="AzerothWarsCSharp.Source.Dialogue.ScourgeDialogueSetup.html" name="" title="ScourgeDialogueSetup">ScourgeDialogueSetup</a>
                           </li>
                           <li>
