--- a/api-source/AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.html
+++ b/api-source/AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.html
@@ -73,7 +73,8 @@
   
   <h1 id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras" class="text-break">Class QuestTombOfSargeras
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>The Tomb of Sargeras starts closed, and can be opened by completing this quest.</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -136,7 +137,7 @@
     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras__ctor_unit_Rectangle_unit_.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.%23ctor(unit%2CRectangle%2Cunit)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L17">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L21">View Source</a>
   </span>
   <a id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras__ctor_" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.#ctor*"></a>
   <h4 id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras__ctor_unit_Rectangle_unit_" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.#ctor(unit,Rectangle,unit)">QuestTombOfSargeras(unit, Rectangle, unit)</h4>
@@ -180,7 +181,7 @@
     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_CompletionPopup.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.CompletionPopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L34">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L40">View Source</a>
   </span>
   <a id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_CompletionPopup_" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.CompletionPopup*"></a>
   <h4 id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_CompletionPopup" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.CompletionPopup">CompletionPopup</h4>
@@ -212,7 +213,7 @@
     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_RewardDescription.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L32">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L36">View Source</a>
   </span>
   <a id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_RewardDescription_" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.RewardDescription*"></a>
   <h4 id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_RewardDescription" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.RewardDescription">RewardDescription</h4>
@@ -246,7 +247,7 @@
     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_OnComplete_AzerothWarsCSharp_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.OnComplete(AzerothWarsCSharp.MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L36">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L43">View Source</a>
   </span>
   <a id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_OnComplete_" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.OnComplete*"></a>
   <h4 id="AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras_OnComplete_AzerothWarsCSharp_MacroTools_FactionSystem_Faction_" data-uid="AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras.OnComplete(AzerothWarsCSharp.MacroTools.FactionSystem.Faction)">OnComplete(Faction)</h4>
@@ -286,7 +287,7 @@
                     <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/new/main/apiSpec/new?filename=AzerothWarsCSharp_Source_Quests_QuestTombOfSargeras.md&amp;value=---%0Auid%3A%20AzerothWarsCSharp.Source.Quests.QuestTombOfSargeras%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L11" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/AzerothWarsCSharp/blob/main/src/AzerothWarsCSharp.Source/Quests/QuestTombOfSargeras.cs/#L14" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
