deploy: dab1a8dce2a3e40ec0c17118a62afca94ac728fb

--- a/api-macroTools/AzerothWarsCSharp.MacroTools.Buffs.IncomeBuff.html
+++ b/api-macroTools/AzerothWarsCSharp.MacroTools.Buffs.IncomeBuff.html
@@ -73,7 +73,7 @@
   
   <h1 id="AzerothWarsCSharp_MacroTools_Buffs_IncomeBuff" data-uid="AzerothWarsCSharp.MacroTools.Buffs.IncomeBuff" class="text-break">Class IncomeBuff
   </h1>
-  <div class="markdown level0 summary"><p>Increases the owning <see cref="!:player"></see>'s income.</p>
+  <div class="markdown level0 summary"><p>Increases the owning player's income.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
