--- a/api-macroTools/AzerothWarsCSharp.MacroTools.FactionSystem.Team.html
+++ b/api-macroTools/AzerothWarsCSharp.MacroTools.FactionSystem.Team.html
@@ -73,7 +73,7 @@
   
   <h1 id="AzerothWarsCSharp_MacroTools_FactionSystem_Team" data-uid="AzerothWarsCSharp.MacroTools.FactionSystem.Team" class="text-break">Class Team
   </h1>
-  <div class="markdown level0 summary"><p>A collection of <see cref="!:player"></see>s who are all allied to each other.</p>
+  <div class="markdown level0 summary"><p>A collection of players who are all allied to each other.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
