--- a/api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.Spell.html
+++ b/api-macroTools/AzerothWarsCSharp.MacroTools.SpellSystem.Spell.html
@@ -73,7 +73,7 @@
   
   <h1 id="AzerothWarsCSharp_MacroTools_SpellSystem_Spell" data-uid="AzerothWarsCSharp.MacroTools.SpellSystem.Spell" class="text-break">Class Spell
   </h1>
-  <div class="markdown level0 summary"><p>A castable ability which can be invoked by a <see cref="!:unit"></see>.</p>
+  <div class="markdown level0 summary"><p>A castable ability which can be invoked by a unit.</p>
 <p>Provides a set of overrideable methods that, when implemented, define everything that a given custom spell does.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
