--- a/api-macroTools/AzerothWarsCSharp.MacroTools.UnitExtensions.html
+++ b/api-macroTools/AzerothWarsCSharp.MacroTools.UnitExtensions.html
@@ -73,7 +73,7 @@
   
   <h1 id="AzerothWarsCSharp_MacroTools_UnitExtensions" data-uid="AzerothWarsCSharp.MacroTools.UnitExtensions" class="text-break">Class UnitExtensions
   </h1>
-  <div class="markdown level0 summary"><p>Provides a series of useful extensions to the <see cref="!:unit"></see> class.</p>
+  <div class="markdown level0 summary"><p>Provides a series of useful extensions to the unit class.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
@@ -687,7 +687,7 @@ This function is 1-indexed.</p>
   </span>
   <a id="AzerothWarsCSharp_MacroTools_UnitExtensions_OwningPlayer_" data-uid="AzerothWarsCSharp.MacroTools.UnitExtensions.OwningPlayer*"></a>
   <h4 id="AzerothWarsCSharp_MacroTools_UnitExtensions_OwningPlayer_unit_" data-uid="AzerothWarsCSharp.MacroTools.UnitExtensions.OwningPlayer(unit)">OwningPlayer(unit)</h4>
-  <div class="markdown level1 summary"><p>Returns the current owner of the specified <see cref="!:unit"></see>/</p>
+  <div class="markdown level1 summary"><p>Returns the current owner of the specified unit/</p>
 </div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
@@ -953,7 +953,7 @@ This function is 1-indexed.</p>
   </span>
   <a id="AzerothWarsCSharp_MacroTools_UnitExtensions_SetOwner_" data-uid="AzerothWarsCSharp.MacroTools.UnitExtensions.SetOwner*"></a>
   <h4 id="AzerothWarsCSharp_MacroTools_UnitExtensions_SetOwner_unit_player_" data-uid="AzerothWarsCSharp.MacroTools.UnitExtensions.SetOwner(unit,player)">SetOwner(unit, player)</h4>
-  <div class="markdown level1 summary"><p>Changess the <see cref="!:unit"></see>'s owner to the specified <see cref="!:player"></see>.</p>
+  <div class="markdown level1 summary"><p>Changess the unit's owner to the specified player.</p>
 </div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
