--- a/api-source/AzerothWarsCSharp.Source.Quests.Warsong.QuestChenStormstout.html
+++ b/api-source/AzerothWarsCSharp.Source.Quests.Warsong.QuestChenStormstout.html
@@ -73,7 +73,7 @@
   
   <h1 id="AzerothWarsCSharp_Source_Quests_Warsong_QuestChenStormstout" data-uid="AzerothWarsCSharp.Source.Quests.Warsong.QuestChenStormstout" class="text-break">Class QuestChenStormstout
   </h1>
-  <div class="markdown level0 summary"><p>Chen Stormstout joins the Warsong when a Warsong <see cref="!:unit"></see> approaches him.</p>
+  <div class="markdown level0 summary"><p>Chen Stormstout joins the Warsong when a Warsong unit approaches him.</p>
 </div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
