--- a/api-source/AzerothWarsCSharp.Source.GameLogic.StartingResources.html
+++ b/api-source/AzerothWarsCSharp.Source.GameLogic.StartingResources.html
@@ -98,7 +98,7 @@
   </span>
   <a id="AzerothWarsCSharp_Source_GameLogic_StartingResources_Setup_" data-uid="AzerothWarsCSharp.Source.GameLogic.StartingResources.Setup*"></a>
   <h4 id="AzerothWarsCSharp_Source_GameLogic_StartingResources_Setup" data-uid="AzerothWarsCSharp.Source.GameLogic.StartingResources.Setup">Setup()</h4>
-  <div class="markdown level1 summary"><p>After a period of time, gives all <see cref="!:player"></see>s their starting resources.</p>
+  <div class="markdown level1 summary"><p>After a period of time, gives all players their starting resources.</p>
 </div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
