--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1068,6 +1068,9 @@
                               <a href="AzerothWarsCSharp.Source.Setup.FactionSetup.GoblinSetup.html" name="" title="GoblinSetup">GoblinSetup</a>
                           </li>
                           <li>
+                              <a href="AzerothWarsCSharp.Source.Setup.FactionSetup.IllidanSetup.html" name="" title="IllidanSetup">IllidanSetup</a>
+                          </li>
+                          <li>
                               <a href="AzerothWarsCSharp.Source.Setup.FactionSetup.IllidariSetup.html" name="" title="IllidariSetup">IllidariSetup</a>
                           </li>
                           <li>
