deploy: 3d7df1b9194f3db0604ce56cd32c9ebe5341d020

--- a/api-source/AzerothWarsCSharp.Source.Setup.NeutralHostileSetup.html
+++ b/api-source/AzerothWarsCSharp.Source.Setup.NeutralHostileSetup.html
@@ -98,7 +98,7 @@
   </span>
   <a id="AzerothWarsCSharp_Source_Setup_NeutralHostileSetup_Setup_" data-uid="AzerothWarsCSharp.Source.Setup.NeutralHostileSetup.Setup*"></a>
   <h4 id="AzerothWarsCSharp_Source_Setup_NeutralHostileSetup_Setup" data-uid="AzerothWarsCSharp.Source.Setup.NeutralHostileSetup.Setup">Setup()</h4>
-  <div class="markdown level1 summary"><p>Grants all units controlled by Illidari to Neutral Hostile, then gives the actual Illidan hero back to Illidari.</p>
+  <div class="markdown level1 summary"><p>Grants all units controlled by Illidan to Neutral Hostile, then gives the actual Illidan hero back to Illidan.</p>
 </div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
