deploy: 7e15af31e721112a51ca6be609881e062a2d32ba

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -39,6 +39,9 @@
                               <a href="AzerothWarsCSharp.MacroTools.QuestMenuSetup.html" name="" title="QuestMenuSetup">QuestMenuSetup</a>
                           </li>
                           <li>
+                              <a href="AzerothWarsCSharp.MacroTools.RectangleExtensions.html" name="" title="RectangleExtensions">RectangleExtensions</a>
+                          </li>
+                          <li>
                               <a href="AzerothWarsCSharp.MacroTools.SoundLibrary.html" name="" title="SoundLibrary">SoundLibrary</a>
                           </li>
                           <li>
