--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -270,9 +270,6 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="WarcraftLegacies.Source.Mechanics.Scourge.Plague.DarkConversionPeriodicAction.html" name="" title="DarkConversionPeriodicAction">DarkConversionPeriodicAction</a>
-                          </li>
-                          <li>
                               <a href="WarcraftLegacies.Source.Mechanics.Scourge.Plague.PlagueCauldronBuff.html" name="" title="PlagueCauldronBuff">PlagueCauldronBuff</a>
                           </li>
                           <li>
@@ -1322,6 +1319,9 @@
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.IllidanSpellSetup.html" name="" title="IllidanSpellSetup">IllidanSpellSetup</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.KulTirasSpellSetup.html" name="" title="KulTirasSpellSetup">KulTirasSpellSetup</a>
                           </li>
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.LegionSpellSetup.html" name="" title="LegionSpellSetup">LegionSpellSetup</a>
