--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -195,6 +195,9 @@
                               <a href="MacroTools.Cheats.CheatControl.html" name="" title="CheatControl">CheatControl</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Cheats.CheatDestroy.html" name="" title="CheatDestroy">CheatDestroy</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Cheats.CheatFaction.html" name="" title="CheatFaction">CheatFaction</a>
                           </li>
                           <li>
