deploy: 450aac77fed5a8b0fe05baa2ac118ac2db8629c8

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -33,16 +33,6 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a href="WarcraftLegacies.Source.ArtifactBehaviour.html" name="" title="WarcraftLegacies.Source.ArtifactBehaviour">WarcraftLegacies.Source.ArtifactBehaviour</a>
-                    
-                    <ul class="nav level2">
-                          <li>
-                              <a href="WarcraftLegacies.Source.ArtifactBehaviour.ZinrokhAssembly.html" name="" title="ZinrokhAssembly">ZinrokhAssembly</a>
-                          </li>
-                    </ul>
-                </li>
-                <li>
-                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Artifacts.html" name="" title="WarcraftLegacies.Source.Artifacts">WarcraftLegacies.Source.Artifacts</a>
                     
                     <ul class="nav level2">
@@ -287,6 +277,9 @@
                     <ul class="nav level2">
                           <li>
                               <a href="WarcraftLegacies.Source.Quests.QuestTombOfSargeras.html" name="" title="QuestTombOfSargeras">QuestTombOfSargeras</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Quests.QuestZinrokhAssembly.html" name="" title="QuestZinrokhAssembly">QuestZinrokhAssembly</a>
                           </li>
                     </ul>
                 </li>
