--- a/api-source/WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.html
+++ b/api-source/WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.html
@@ -73,7 +73,8 @@
   
   <h1 id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar" class="text-break">Class QuestKhadgar
   </h1>
-  <div class="markdown level0 summary"></div>
+  <div class="markdown level0 summary"><p>When Black Temple is destroyed, Stormwind can train Khadgar.</p>
+</div>
   <div class="markdown level0 conceptual"></div>
   <div class="inheritance">
     <h5>Inheritance</h5>
@@ -136,7 +137,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar__ctor.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.%23ctor%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L15">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L16">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar__ctor_" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.#ctor*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar__ctor" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.#ctor">QuestKhadgar()</h4>
@@ -153,7 +154,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_CompletionPopup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.CompletionPopup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L26">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L24">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_CompletionPopup_" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.CompletionPopup*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_CompletionPopup" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.CompletionPopup">CompletionPopup</h4>
@@ -185,7 +186,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_RewardDescription.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.RewardDescription%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L29">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L27">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_RewardDescription_" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.RewardDescription*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_RewardDescription" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.RewardDescription">RewardDescription</h4>
@@ -219,7 +220,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_OnAdd_MacroTools_FactionSystem_Faction_.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.OnAdd(MacroTools.FactionSystem.Faction)%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L31">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L29">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_OnAdd_" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.OnAdd*"></a>
   <h4 id="WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar_OnAdd_MacroTools_FactionSystem_Faction_" data-uid="WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar.OnAdd(MacroTools.FactionSystem.Faction)">OnAdd(Faction)</h4>
@@ -259,7 +260,7 @@
                     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Quests_Stormwind_QuestKhadgar.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Quests.Stormwind.QuestKhadgar%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A" class="contribution-link">Improve this Doc</a>
                   </li>
                   <li>
-                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L11" class="contribution-link">View Source</a>
+                    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Quests/Stormwind/QuestKhadgar.cs/#L12" class="contribution-link">View Source</a>
                   </li>
                 </ul>
               </div>
