deploy: e8f79b9c236a1a56eb96d984758af349b5d8661a

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -924,6 +924,25 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="MacroTools.Spells.Slipstream.html" name="" title="MacroTools.Spells.Slipstream">MacroTools.Spells.Slipstream</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="MacroTools.Spells.Slipstream.SlipstreamPortalBuff.html" name="" title="SlipstreamPortalBuff">SlipstreamPortalBuff</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Spells.Slipstream.SlipstreamPortalChannel.html" name="" title="SlipstreamPortalChannel">SlipstreamPortalChannel</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Spells.Slipstream.SlipstreamPortalState.html" name="" title="SlipstreamPortalState">SlipstreamPortalState</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Spells.Slipstream.SlipstreamSpell.html" name="" title="SlipstreamSpell">SlipstreamSpell</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="MacroTools.SpellSystem.html" name="" title="MacroTools.SpellSystem">MacroTools.SpellSystem</a>
                     
                     <ul class="nav level2">
