--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1328,6 +1328,9 @@
                           <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.ScourgeSpellSetup.html" name="" title="ScourgeSpellSetup">ScourgeSpellSetup</a>
                           </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.StormwindSpellSetup.html" name="" title="StormwindSpellSetup">StormwindSpellSetup</a>
+                          </li>
                     </ul>
                 </li>
                 <li>
