deploy: d8f463c42f1618555bd8d3c8d7efa10f8563f732

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -547,6 +547,12 @@
                     
                     <ul class="nav level2">
                           <li>
+                              <a href="MacroTools.Mechanics.StructurePacking.html" name="" title="StructurePacking">StructurePacking</a>
+                          </li>
+                          <li>
+                              <a href="MacroTools.Mechanics.StructurePacking.PackableStructure.html" name="" title="StructurePacking.PackableStructure">StructurePacking.PackableStructure</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Mechanics.Waygate.html" name="" title="Waygate">Waygate</a>
                           </li>
                           <li>
