--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -192,6 +192,19 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
+                    <a href="WarcraftLegacies.Source.Mechanics.Frostwolf.html" name="" title="WarcraftLegacies.Source.Mechanics.Frostwolf">WarcraftLegacies.Source.Mechanics.Frostwolf</a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Frostwolf.FrostwolfStructurePackingInit.html" name="" title="FrostwolfStructurePackingInit">FrostwolfStructurePackingInit</a>
+                          </li>
+                          <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Frostwolf.FrostwolftructurePackingConfig.html" name="" title="FrostwolftructurePackingConfig">FrostwolftructurePackingConfig</a>
+                          </li>
+                    </ul>
+                </li>
+                <li>
+                    <span class="expand-stub"></span>
                     <a href="WarcraftLegacies.Source.Mechanics.Goblins.html" name="" title="WarcraftLegacies.Source.Mechanics.Goblins">WarcraftLegacies.Source.Mechanics.Goblins</a>
                     
                     <ul class="nav level2">
