--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1175,6 +1175,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendDraenei.html" name="" title="LegendDraenei">LegendDraenei</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html" name="" title="LegendDragonmaw">LegendDragonmaw</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Legends.LegendDruids.html" name="" title="LegendDruids">LegendDruids</a>
                           </li>
                           <li>
