deploy: 704442bc2fae32dc79c459014cfe828871e34e1d

--- a/api-source/WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html
+++ b/api-source/WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.html
@@ -90,18 +90,18 @@
   </h3>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendDragonmawPort.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendDragonmawPort%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_DragonmawPort.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.DragonmawPort%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendDragonmaw.cs/#L9">View Source</a>
   </span>
-  <a id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendDragonmawPort_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendDragonmawPort*"></a>
-  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_LegendDragonmawPort" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.LegendDragonmawPort">LegendDragonmawPort</h4>
+  <a id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_DragonmawPort_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.DragonmawPort*"></a>
+  <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_DragonmawPort" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.DragonmawPort">DragonmawPort</h4>
   <div class="markdown level1 summary"></div>
   <div class="markdown level1 conceptual"></div>
   <h5 class="decalaration">Declaration</h5>
   <div class="codewrapper">
-    <pre><code class="lang-csharp hljs">public static Legend LegendDragonmawPort { get; }</code></pre>
+    <pre><code class="lang-csharp hljs">public static Legend DragonmawPort { get; }</code></pre>
   </div>
   <h5 class="propertyValue">Property Value</h5>
   <table class="table table-bordered table-striped table-condensed">
@@ -125,7 +125,7 @@
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Setup.md&amp;value=---%0Auid%3A%20WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Setup%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
-    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendDragonmaw.cs/#L12">View Source</a>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/WarcraftLegacies.Source/Setup/Legends/LegendDragonmaw.cs/#L11">View Source</a>
   </span>
   <a id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Setup_" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Setup*"></a>
   <h4 id="WarcraftLegacies_Source_Setup_Legends_LegendDragonmaw_Setup" data-uid="WarcraftLegacies.Source.Setup.Legends.LegendDragonmaw.Setup">Setup()</h4>
