deploy: d95200aaff1919ba63da114093abf3cfcbc9b9d4

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -616,6 +616,9 @@
                               <a href="MacroTools.PassiveAbilities.HideousAppendages.html" name="" title="HideousAppendages">HideousAppendages</a>
                           </li>
                           <li>
+                              <a href="MacroTools.PassiveAbilities.PersistentSoul.html" name="" title="PersistentSoul">PersistentSoul</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.PassiveAbilities.ProvidesIncome.html" name="" title="ProvidesIncome">ProvidesIncome</a>
                           </li>
                           <li>
