--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -1321,6 +1321,9 @@
                               <a href="WarcraftLegacies.Source.Setup.Spells.DruidsSpellSetup.html" name="" title="DruidsSpellSetup">DruidsSpellSetup</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Setup.Spells.ForsakenSpellSetup.html" name="" title="ForsakenSpellSetup">ForsakenSpellSetup</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Setup.Spells.FrostwolfSpellSetup.html" name="" title="FrostwolfSpellSetup">FrostwolfSpellSetup</a>
                           </li>
                           <li>
