deploy: cb12c6f332dda754219e29cb86017d41f04a8ba0

--- a/api-source/toc.html
+++ b/api-source/toc.html
@@ -212,6 +212,9 @@
                               <a href="WarcraftLegacies.Source.Mechanics.Goblins.NuclearLaunch.html" name="" title="NuclearLaunch">NuclearLaunch</a>
                           </li>
                           <li>
+                              <a href="WarcraftLegacies.Source.Mechanics.Goblins.NuclearLaunchWarning.html" name="" title="NuclearLaunchWarning">NuclearLaunchWarning</a>
+                          </li>
+                          <li>
                               <a href="WarcraftLegacies.Source.Mechanics.Goblins.OilProducer.html" name="" title="OilProducer">OilProducer</a>
                           </li>
                           <li>
