--- a/api-macroTools/MacroTools.PassiveAbilitySystem.PassiveAbility.html
+++ b/api-macroTools/MacroTools.PassiveAbilitySystem.PassiveAbility.html
@@ -272,6 +272,22 @@
   </div>
   <span class="small pull-right mobile-hide">
     <span class="divider">|</span>
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_PassiveAbilitySystem_PassiveAbility_OnOrderIssued.md&amp;value=---%0Auid%3A%20MacroTools.PassiveAbilitySystem.PassiveAbility.OnOrderIssued%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
+  </span>
+  <span class="small pull-right mobile-hide">
+    <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/blob/main/src/MacroTools/PassiveAbilitySystem/PassiveAbility.cs/#L80">View Source</a>
+  </span>
+  <a id="MacroTools_PassiveAbilitySystem_PassiveAbility_OnOrderIssued_" data-uid="MacroTools.PassiveAbilitySystem.PassiveAbility.OnOrderIssued*"></a>
+  <h4 id="MacroTools_PassiveAbilitySystem_PassiveAbility_OnOrderIssued" data-uid="MacroTools.PassiveAbilitySystem.PassiveAbility.OnOrderIssued">OnOrderIssued()</h4>
+  <div class="markdown level1 summary"><p>Fired when the unit is issued a point order.</p>
+</div>
+  <div class="markdown level1 conceptual"></div>
+  <h5 class="decalaration">Declaration</h5>
+  <div class="codewrapper">
+    <pre><code class="lang-csharp hljs">public virtual void OnOrderIssued()</code></pre>
+  </div>
+  <span class="small pull-right mobile-hide">
+    <span class="divider">|</span>
     <a href="https://github.com/AzerothWarsLR/WarcraftLegacies/new/main/apiSpec/new?filename=MacroTools_PassiveAbilitySystem_PassiveAbility_OnTrained.md&amp;value=---%0Auid%3A%20MacroTools.PassiveAbilitySystem.PassiveAbility.OnTrained%0Asummary%3A%20'*You%20can%20override%20summary%20for%20the%20API%20here%20using%20*MARKDOWN*%20syntax'%0A---%0A%0A*Please%20type%20below%20more%20information%20about%20this%20API%3A*%0A%0A">Improve this Doc</a>
   </span>
   <span class="small pull-right mobile-hide">
