deploy: 69521ebe5c4baa89339ee2aa369e8c9c906247b7

--- a/api-macroTools/toc.html
+++ b/api-macroTools/toc.html
@@ -322,6 +322,9 @@
                               <a href="MacroTools.Extensions.RectangleExtensions.html" name="" title="RectangleExtensions">RectangleExtensions</a>
                           </li>
                           <li>
+                              <a href="MacroTools.Extensions.RectangleExtensions.RescueMode.html" name="" title="RectangleExtensions.RescueMode">RectangleExtensions.RescueMode</a>
+                          </li>
+                          <li>
                               <a href="MacroTools.Extensions.SoundExtensions.html" name="" title="SoundExtensions">SoundExtensions</a>
                           </li>
                           <li>
